...
        android:layout_below="@id/txt_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btn_0000"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/centre"
        android:layout_marginTop="0dp"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@id/centre"
        android:text="0000" />

    <Button
        android:id="@+id/btn_0630"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/centre"
        android:layout_toRightOf="@id/centre"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="20dp"
        android:text="0630"
        />
    <Button
        android:id="@+id/btn_0700"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_0000"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@id/centre"
        android:layout_marginRight="20dp"
        android:text="0700"
        />

    <Button
        android:id="@+id/btn_0730"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_0630"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/centre"
        android:layout_marginLeft="20dp"
        android:text="0730"
        />

    <Button
        android:id="@+id/btn_0800"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_0700"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@id/centre"
        android:layout_marginRight="20dp"
        android:text="0800"
        />

    <Button
        android:id="@+id/btn_0830"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_0730"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/centre"
        android:layout_marginLeft="20dp"
        android:text="0830"
        />

    <Button
        android:id="@+id/btn_0900"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/btn_0800"
        android:layout_marginTop="10dp"
        android:layout_toStartOf="@id/centre"
        android:layout_marginRight="20dp"
        android:text="0900"
        />

    <Button
        android:id="@+id/btn_1000"
        android:layout_width="80dp"
        android:layout_height="50dp"
...
