...
            android:layout_marginTop="47dp"
            android:text="@string/txt_sunday"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btn_mondayone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_tuesdayone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_mondayone"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_wednesdayone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_tuesdayone"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btn_thursdayone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_wednesdayone"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_fridayone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_thursdayone"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_saturdayone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_fridayone"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_sundayone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_saturdayone"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />


        <Button
            android:id="@+id/btn_mondaytwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="65dp"
            android:layout_toRightOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_tuesdaytwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_mondaytwo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_wednesdaytwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_tuesdaytwo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_thursdaytwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_wednesdaytwo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_fridaytwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_thursdaytwo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_saturdaytwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_fridaytwo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/txt_monday"
            android:text="@string/btn_empty"
            android:textSize="25dp" />
        <Button
            android:id="@+id/btn_sundaytwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_saturdaytwo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/txt_monday"
...
